--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin — Registrar Compra (Meta CAPI) v2.0</title>
   <style>
+    /* ----- ESTILOS CORREGIDOS ----- */
+    html, body { 
+      height: 100%; /* Asegura que el body ocupe el 100% */
+      margin: 0;
+      padding: 0;
+    }
     body { 
       font-family: Arial, sans-serif; 
       background:#0b0b0b; 
@@ -12,71 +18,85 @@
       display:flex; 
       align-items:center; /* Centra verticalmente */
       justify-content:center; /* Centra horizontalmente */
-      min-height:100vh; /* Asegura que ocupe toda la altura de la vista */
-      margin:0; 
-      padding: 20px; /* Un poco de padding para pantallas pequeñas */
-      box-sizing: border-box; /* Incluye padding en el ancho */
+      min-height:100%; /* Ocupa al menos toda la altura de la vista */
+      padding: 20px; /* Padding para que no se pegue a los bordes */
+      box-sizing: border-box; 
     }
     .card { 
       background:#111; 
-      padding:20px; 
+      padding: 25px; /* Más padding para que se vea mejor */
       border-radius:10px; 
       width:100%; /* Ocupa el 100% del ancho disponible */
-      max-width:420px; /* Pero no más de 420px */
+      max-width:450px; /* Pero no más de 450px */
       box-shadow:0 8px 30px rgba(0,0,0,0.6); 
-      box-sizing: border-box; /* Incluye padding en el ancho */
+      box-sizing: border-box; 
     }
     input, button { 
       width:100%; 
-      padding:10px; 
-      margin:8px 0; 
+      padding: 12px; /* Un poco más de padding */
+      margin: 8px 0 16px 0; /* Más margen inferior */
       border-radius:6px; 
-      border:1px solid #222; 
+      border:1px solid #333; /* Borde un poco más visible */
       background:#0d0d0d; 
       color:#fff; 
-      box-sizing: border-box; /* Incluye padding en el ancho */
+      box-sizing: border-box; 
+      font-size: 1rem;
     }
+    input::placeholder {
+      color: #777;
+    }
     button { 
-      background:#1f8ef1; 
+      background:#1f8ef1; /* Botón azul */
       border:none; 
       font-weight:700; 
       cursor:pointer; 
+      margin-top: 15px; /* Margen superior para el botón */
+      margin-bottom: 0;
     }
     button:disabled { 
       opacity:0.6; 
       cursor:not-allowed; 
     }
     #response { 
-      margin-top:10px; 
+      margin-top:15px; 
       white-space:pre-wrap; 
       font-size:0.9rem; 
-      word-break: break-all; 
+      word-break: break-all;
+      background-color: #0d0d0d;
+      border: 1px solid #333;
+      padding: 10px;
+      border-radius: 6px;
     }
     .hint { 
       font-size:0.85rem; 
       color:#9aa; 
-      margin-bottom:8px; 
+      margin: 0 0 8px 0;
+      line-height: 1.4;
     }
     label { 
       font-size:0.85rem; 
       color:#cfd; 
       display:block; 
-      margin-top:6px; 
+      margin-top: 12px;
     }
     .section-title { 
       font-size: 0.9rem; 
       color: #00ff88; 
-      margin-top: 20px; 
+      margin-top: 25px; 
+      margin-bottom: 5px;
       border-bottom: 1px solid #333; 
       padding-bottom: 5px;
     }
+    h2 {
+      margin: 0 0 10px 0;
+    }
   </style>
 </head>
 <body>
   <div class="card" role="main">
-    <h2 style="margin:0 0 10px 0;">Registrar Compra — CAPI</h2>
+    <h2>Registrar Compra — CAPI</h2>
 
-    <p class="hint">Ingresá la <strong>clave administrativa</strong> </p>
+    <p class="hint">Ingresá la <strong>clave administrativa</strong>.</p>
     <label for="adminToken">Clave administrativa</label>
     <input id="adminToken" type="password" autocomplete="off" placeholder="token" />
 
@@ -116,6 +136,7 @@
   </div>
 
   <script>
+    // El código Javascript es el mismo, no necesita cambios.
     const $ = id => document.getElementById(id);
     const sendBtn = $('sendBtn');
     const resp = $('response');
@@ -129,23 +150,18 @@
 
     async function sendPurchase() {
       resp.textContent = '';
-
-      // --- Recolectar TODOS los datos ---
       const adminToken = $('adminToken').value.trim();
       const nombre = $('nombre').value.trim();
       const apellido = $('apellido').value.trim();
       const phone = $('phone').value.trim();
       const amount = $('amount').value.trim();
       const event_time = $('event_time').value;
-      
-      // --- Nuevos campos de EMQ ---
       const click_id = $('click_id').value.trim();
       const event_id = $('event_id').value.trim();
       const fbp = $('fbp').value.trim();
       const fbc = $('fbc').value.trim();
 
       if (!adminToken) { resp.textContent = '🔒 Necesitás la clave administrativa.'; return; }
-      // Validar campos obligatorios
       if (!nombre || !apellido || !phone || !amount || !event_id || !fbp) {
         resp.textContent = '❌ Completa todos los campos obligatorios (Nombre, Apellido, Tel, Monto, Event ID, FBP).';
         return;
@@ -156,17 +172,9 @@
       sendBtn.textContent = 'Enviando...';
 
       try {
-        // --- Crear el payload completo ---
         const payload = { 
-          nombre, 
-          apellido, 
-          phone, 
-          amount, 
-          event_time,
-          click_id, // enviado para logging
-          event_id, // enviado para deduplicación
-          fbp,      // enviado para EMQ
-          fbc       // enviado para EMQ
+          nombre, apellido, phone, amount, event_time,
+          click_id, event_id, fbp, fbc
         };
         
         const res = await fetch('/api/meta-purchase', {
