--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
       background:#111; 
       padding:25px; 
       border-radius:10px; 
-      width: 450px; /* ANCHO AUMENTADO para los nuevos campos */
+      width: 450px; /* Ancho para que quepan los campos */
       max-width: 95%; /* Responsive */
       box-shadow:0 8px 30px rgba(0,0,0,0.6); 
       box-sizing: border-box;
@@ -60,14 +60,17 @@
       padding: 10px;
       border-radius: 6px;
     }
-    .hint { font-size:0.85rem; color:#9aa; margin-bottom:8px; }
+    .hint { 
+      font-size:0.85rem; 
+      color:#9aa; 
+      margin-bottom:8px; 
+    }
     label { 
       font-size:0.85rem; 
       color:#cfd; 
       display:block; 
       margin-top:12px; 
     }
-    /* Estilo añadido para los títulos verdes */
     .section-title { 
       font-size: 0.9rem; 
       color: #00ff88; 
@@ -84,7 +87,7 @@
 <body>
   
     <div class="card" role="main">
-    <h2 style="margin:0 0 10px 0;">Registrar Compra — CAPI</h2>
+    <h2>Registrar Compra — CAPI</h2>
 
     <p class="hint">Ingresá la <strong>clave administrativa</strong>.</p>
     <label for="adminToken">Clave administrativa</label>
@@ -126,8 +129,7 @@
     <div id="response" aria-live="polite"></div>
   </div>
 
-  script
-  <script>
+    <script>
     const $ = id => document.getElementById(id);
     const sendBtn = $('sendBtn');
     const resp = $('response');
@@ -152,7 +154,7 @@
       const fbp = $('fbp').value.trim();
       const fbc = $('fbc').value.trim();
 
-      if (!adminToken) { resp.textContent = '🔒 Necesitás la clave administrativa.'; return; }
+...     if (!adminToken) { resp.textContent = '🔒 Necesitás la clave administrativa.'; return; }
       if (!nombre || !apellido || !phone || !amount || !event_id || !fbp) {
         resp.textContent = '❌ Completa todos los campos obligatorios (Nombre, Apellido, Tel, Monto, Event ID, FBP).';
         return;
@@ -182,7 +184,8 @@
           resp.textContent = '✅ Compra enviada correctamente.\n\n' + JSON.stringify(data.metaResponse, null, 2);
         } else {
           resp.textContent = '❌ Error: ' + (data.error || data.message || JSON.stringify(data));
-        }
+</div>
+      }
       } catch (e) {
         resp.textContent = '❌ Error de red o servidor: ' + e.message;
       } finally {
@@ -194,7 +197,7 @@
     sendBtn.addEventListener('click', sendPurchase);
 
     document.addEventListener('keydown', e => {
-D      if (e.key === 'Enter' && !e.target.matches('textarea')) { // 'textarea' check es buena práctica
+      if (e.key === 'Enter' && !e.target.matches('textarea')) {
         e.preventDefault();
         if (!sendBtn.disabled) sendPurchase();
       }
