--- a/admin.html
+++ b/admin.html
@@ -1,207 +1,224 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Admin — Registrar Compra (Meta CAPI)</title>
-  
-    <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      background:#0b0b0b; 
-      color:#f2f2f2; 
-      display:flex; 
-      align-items:center; 
-      justify-content:center; 
-      min-height:100vh; /* min-height para scrolling */
-      margin:0; 
-      padding: 20px 0; /* Padding vertical por si el form es muy alto */
-      box-sizing: border-box;
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Admin — Registrar Compra (Meta CAPI) v2.0</title>
+  <style>
+    body {
+      font-family: 'Poppins', Arial, sans-serif;
+      background: #000;
+      color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 40px 10px;
     }
-    .card { 
-      background:#111; 
-      padding:25px; 
-      border-radius:10px; 
-      width: 450px; /* Ancho para que quepan los campos */
-      max-width: 95%; /* Responsive */
-      box-shadow:0 8px 30px rgba(0,0,0,0.6); 
-      box-sizing: border-box;
+
+    .card {
+      background: #0d0d0d;
+      padding: 30px;
+      border-radius: 14px;
+      width: 420px;
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.15);
     }
-    input, button { 
-      width:100%; 
-      padding:12px; 
-      margin:8px 0 16px 0; 
-      border-radius:6px; 
-      border:1px solid #333; 
-      background:#0d0d0d; 
-      color:#fff; 
-      font-size: 1rem;
-      box-sizing: border-box; /* Importante */
-    }
-    input::placeholder {
-      color: #777;
-    }
-    button { 
-      background:#1f8ef1; 
-      border:none; 
-      font-weight:700; 
-      cursor:pointer; 
-      margin-top: 15px;
-      margin-bottom: 0;
-    }
-    button:disabled { opacity:0.6; cursor:not-allowed; }
-    #response { 
-      margin-top:15px; 
-      white-space:pre-wrap; 
-      font-size:0.9rem; 
-      word-break: break-all;
-      background-color: #0d0d0d;
-      border: 1px solid #333;
-      padding: 10px;
-      border-radius: 6px;
-    }
-    .hint { 
-      font-size:0.85rem; 
-      color:#9aa; 
-      margin-bottom:8px; 
-    }
-    label { 
-      font-size:0.85rem; 
-      color:#cfd; 
-      display:block; 
-      margin-top:12px; 
-    }
-    .section-title { 
-      font-size: 0.9rem; 
-      color: #00ff88; 
-      margin-top: 25px; 
-      margin-bottom: 5px;
-      border-bottom: 1px solid #333; 
-      padding-bottom: 5px;
-    }
+
     h2 {
-      margin: 0 0 10px 0;
+      color: #00ff88;
+      text-align: center;
+      margin-bottom: 10px;
     }
-  </style>
+
+    .hint {
+      font-size: 0.85rem;
+      color: #aaa;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+      font-size: 0.9rem;
+      color: #bdf9d1;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      border: 1px solid #222;
+      background: #111;
+      color: #fff;
+      box-sizing: border-box;
+      transition: border-color 0.2s;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #00ff88;
+    }
+
+    .section-title {
+      font-size: 0.9rem;
+      color: #00ff88;
+      margin-top: 25px;
+      border-bottom: 1px solid #333;
+      padding-bottom: 5px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    button {
+      background-color: #00ff88;
+      border: none;
+      font-weight: 700;
+      cursor: pointer;
+      color: #000;
+      padding: 12px;
+      border-radius: 8px;
+      width: 100%;
+      margin-top: 15px;
+      font-size: 1rem;
+      transition: all 0.25s ease;
+    }
+
+    button:hover {
+      background-color: #00cc6f;
+      transform: translateY(-1px);
+      box-shadow: 0 0 10px rgba(0, 255, 136, 0.3);
+    }
+
+    button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    #response {
+      margin-top: 15px;
+      white-space: pre-wrap;
+      font-size: 0.9rem;
+      word-break: break-all;
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
-  
-    <div class="card" role="main">
-    <h2>Registrar Compra — CAPI</h2>
+  <div class="card" role="main">
+    <h2>🧾 Registrar Compra — CAPI</h2>
+    <p class="hint">Ingresá la <strong>clave administrativa</strong> para continuar</p>
 
-    <p class="hint">Ingresá la <strong>clave administrativa</strong>.</p>
-    <label for="adminToken">Clave administrativa</label>
-    <input id="adminToken" type="password" autocomplete="off" placeholder="token" />
+    <label for="adminToken">Clave administrativa</label>
+    <input id="adminToken" type="password" autocomplete="off" placeholder="token" />
 
     <h3 class="section-title">Datos del Usuario</h3>
-    <label for="nombre">Nombre</label>
-    <input id="nombre" type="text" placeholder="nombre" />
 
-    <label for="apellido">Apellido</label>
-    <input id="apellido" type="text" placeholder="apellido" />
+    <label for="nombre">Nombre</label>
+    <input id="nombre" type="text" placeholder="nombre" />
 
-    <label for="phone">Teléfono (ej: +5491122334455)</label>
-    <input id="phone" type="text" placeholder="+5491122334455" />
+    <label for="apellido">Apellido</label>
+    <input id="apellido" type="text" placeholder="apellido" />
 
-    <label for="amount">Monto en ARS (ej: 26000)</label>
-    <input id="amount" type="number" placeholder="26000" />
+    <label for="phone">Teléfono (ej: +5491122334455)</label>
+    <input id="phone" type="text" placeholder="+5491122334455" />
 
-    <label for="event_time">Fecha y hora (opcional)</label>
-    <input id="event_time" type="datetime-local" />
+    <label for="amount">Monto en ARS (ej: 26000)</label>
+    <input id="amount" type="number" placeholder="26000" />
+
+    <label for="event_time">Fecha y hora (opcional)</label>
+    <input id="event_time" type="datetime-local" />
 
     <h3 class="section-title">Datos de Vinculación (EMQ 10/10)</h3>
-    <p class="hint">Sacar estos datos del Google Sheet donde se registran los "Contact".</p>
+    <p class="hint">Sacar estos datos del Google Sheet</p>
 
-    <label for="click_id">Click ID (El código corto, ej: A9B3D)</label>
-    <input id="click_id" type="text" placeholder="A9B3D" />
+    <label for="click_id">Click ID (código corto, ej: A9B3D)</label>
+    <input id="click_id" type="text" placeholder="A9B3D" />
 
-    <label for="event_id">Event ID (El 'contact-ID', ej: contact-A9B3D)</label>
-    <input id="event_id" type="text" placeholder="contact-A9B3D" />
+    <label for="event_id">Event ID (ej: contact-A9B3D)</label>
+    <input id="event_id" type="text" placeholder="contact-A9B3D" />
 
     <label for="fbp">FBP (Cookie de Navegador)</label>
-    <input id="fbp" type="text" placeholder="fb.1.1731269872.1234567890" />
+    <input id="fbp" type="text" placeholder="fb.1.1731269872.1234567890" />
 
     <label for="fbc">FBC (Cookie de Clic, opcional)</label>
-    <input id="fbc" type="text" placeholder="fb.1.1731269872.TEST123" />
+    <input id="fbc" type="text" placeholder="fb.1.1731269872.TEST123" />
 
-    <button id="sendBtn">Enviar compra a Meta</button>
+    <button id="sendBtn">Enviar compra a Meta</button>
+    <div id="response" aria-live="polite"></div>
+  </div>
 
-    <div id="response" aria-live="polite"></div>
-  </div>
+  <script>
+    const $ = id => document.getElementById(id);
+    const sendBtn = $('sendBtn');
+    const resp = $('response');
 
-    <script>
-    const $ = id => document.getElementById(id);
-    const sendBtn = $('sendBtn');
-    const resp = $('response');
+    function validatePhone(p) {
+      if (!p) return false;
+      const cleaned = p.trim();
+      const digits = cleaned.replace(/\D/g, '');
+      return digits.length >= 7;
+    }
 
-    function validatePhone(p) {
-      if (!p) return false;
-      const cleaned = p.trim();
-      const digits = cleaned.replace(/\D/g, '');
-      return digits.length >= 7;
-    }
+    async function sendPurchase() {
+      resp.textContent = '';
 
-    async function sendPurchase() {
-      resp.textContent = '';
-      const adminToken = $('adminToken').value.trim();
-      const nombre = $('nombre').value.trim();
-      const apellido = $('apellido').value.trim();
-      const phone = $('phone').value.trim();
-      const amount = $('amount').value.trim();
-      const event_time = $('event_time').value;
+      const adminToken = $('adminToken').value.trim();
+      const nombre = $('nombre').value.trim();
+      const apellido = $('apellido').value.trim();
+      const phone = $('phone').value.trim();
+      const amount = $('amount').value.trim();
+      const event_time = $('event_time').value;
       const click_id = $('click_id').value.trim();
       const event_id = $('event_id').value.trim();
       const fbp = $('fbp').value.trim();
       const fbc = $('fbc').value.trim();
 
-...     if (!adminToken) { resp.textContent = '🔒 Necesitás la clave administrativa.'; return; }
-      if (!nombre || !apellido || !phone || !amount || !event_id || !fbp) {
-        resp.textContent = '❌ Completa todos los campos obligatorios (Nombre, Apellido, Tel, Monto, Event ID, FBP).';
-        return;
-      }
-      if (!validatePhone(phone)) { resp.textContent = '❌ Teléfono inválido.'; return; }
+      if (!adminToken) { resp.textContent = '🔒 Necesitás la clave administrativa.'; return; }
+      if (!nombre || !apellido || !phone || !amount || !event_id || !fbp) {
+        resp.textContent = '❌ Completa todos los campos obligatorios (Nombre, Apellido, Tel, Monto, Event ID, FBP).';
+        return;
+      }
+      if (!validatePhone(phone)) { resp.textContent = '❌ Teléfono inválido.'; return; }
 
-      sendBtn.disabled = true;
-      sendBtn.textContent = 'Enviando...';
+      sendBtn.disabled = true;
+      sendBtn.textContent = 'Enviando...';
 
-      try {
-        const payload = { 
-          nombre, apellido, phone, amount, event_time,
-          click_id, event_id, fbp, fbc
-        };
-        
-        const res = await fetch('/api/meta-purchase', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': 'Bearer ' + adminToken
-          },
-          body: JSON.stringify(payload)
-        });
+      try {
+        const payload = { nombre, apellido, phone, amount, event_time, click_id, event_id, fbp, fbc };
+        const res = await fetch('/api/meta-purchase', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + adminToken
+          },
+          body: JSON.stringify(payload)
+        });
 
-        const data = await res.json();
-        if (res.ok && data.success) {
-          resp.textContent = '✅ Compra enviada correctamente.\n\n' + JSON.stringify(data.metaResponse, null, 2);
-        } else {
-          resp.textContent = '❌ Error: ' + (data.error || data.message || JSON.stringify(data));
-</div>
-      }
-      } catch (e) {
-        resp.textContent = '❌ Error de red o servidor: ' + e.message;
-      } finally {
-        sendBtn.disabled = false;
-        sendBtn.textContent = 'Enviar compra a Meta';
-      }
-    }
+        const data = await res.json();
+        if (res.ok && data.success) {
+          resp.textContent = '✅ Compra enviada correctamente.\n\n' + JSON.stringify(data.metaResponse, null, 2);
+        } else {
+          resp.textContent = '❌ Error: ' + (data.error || data.message || JSON.stringify(data));
+        }
+      } catch (e) {
+        resp.textContent = '❌ Error de red o servidor: ' + e.message;
+      } finally {
+        sendBtn.disabled = false;
+        sendBtn.textContent = 'Enviar compra a Meta';
+      }
+    }
 
-    sendBtn.addEventListener('click', sendPurchase);
+    sendBtn.addEventListener('click', sendPurchase);
 
-    document.addEventListener('keydown', e => {
-      if (e.key === 'Enter' && !e.target.matches('textarea')) {
-        e.preventDefault();
-        if (!sendBtn.disabled) sendPurchase();
-      }
-    });
-  </script>
+    document.addEventListener('keydown', e => {
+      if (e.key === 'Enter' && !e.target.matches('textarea')) {
+        e.preventDefault();
+        if (!sendBtn.disabled) sendPurchase();
+      }
+    });
+  </script>
 </body>
 </html>
